tests/ui/request_builder/empty.stderr
error: Missing request

         = help: Try `request!(GET /hello)`

 --> tests/ui/request_builder/empty.rs:4:15
  |
4 |     let req = request_builder!();
  |               ^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `request_builder` (in Nightly builds, run with -Z macro-backtrace for more info)
