tests/ui/request_builder/empty.rs
use http_macros::request_builder;

fn main() {
    let req = request_builder!();
}
